feat: build a first unoptimal solution for the calorie and macro calculations
Needs fixes in the design and displaying the right outputs, but atleast I got it initally build after fighting with deprecated libraries and bad documentation for a while

--- a/src/app/components/macro-calculator/macro-calculator.component.html
+++ b/src/app/components/macro-calculator/macro-calculator.component.html
@@ -1,1 +1,6 @@
-<p>macro-calculator works!</p>
+<div *ngIf="macros">
+  <p>Protein: {{ macros?.protein }}g</p> </div>  <p>Carbs: {{ macros?.carbs }}g</p>   <p>Fat: {{ macros?.fat }}g</p>
+
+<ng-container *ngIf="chartData">
+ <canvas baseChart [data]="chartData" [type]="'pie'"></canvas>
+</ng-container>
