--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-api-test></app-api-test>
-<router-outlet></router-outlet>
+<h1>{{ title }}</h1>
+<p>Testing if this renders</p>
+<app-calorie-calculator></app-calorie-calculator>
