--- a/src/app/components/exercise-selector/exercise-selector.component.html
+++ b/src/app/components/exercise-selector/exercise-selector.component.html
@@ -1,1 +1,6 @@
-<p>exercise-selector works!</p>
+<h2 class="text-xl font-bold mb-4">Select Exercises</h2>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div *ngFor="let exercise of exercises$ | async" >
+        <app-exercise-card [exercise]="exercise" [isSelected]="isSelected(exercise)" (toggle)="toggleExercise($event)"/>
+    </div>
+</div>
