--- a/src/app/components/workouts/workouts.component.html
+++ b/src/app/components/workouts/workouts.component.html
@@ -1,3 +1,10 @@
-<div class="grid grid-cols-2 gap-4 px-10, py-10">
-    <app-exercise-card *ngFor="let exercise of exercises" [exercise]="exercise"></app-exercise-card>
-  </div>
+ <!-- src/app/components/workouts/workouts.component.html -->
+ <div class="flex h-full w-full">
+  <div class="w-1/4 p-4 border-r">
+    <app-workout-list/>
+ </div>
+  <div class="w-3/4 p-4 flex flex-col">
+    <app-workout-form/>
+    <app-exercise-selector/>
+ </div>
+</div>
