--- a/src/app/components/workouts/workouts.component.html
+++ b/src/app/components/workouts/workouts.component.html
@@ -1,10 +1,3 @@
- <!-- src/app/components/workouts/workouts.component.html -->
- <div class="flex h-full w-full">
-  <div class="w-1/4 p-4 border-r">
-    <app-workout-list/>
- </div>
-  <div class="w-3/4 p-4 flex flex-col">
-    <app-workout-form/>
-    <app-exercise-selector/>
- </div>
+<div>
+  <app-workout-editor></app-workout-editor>
 </div>
