--- a/src/app/components/exercise-selector/exercise-selector.component.html
+++ b/src/app/components/exercise-selector/exercise-selector.component.html
@@ -1,6 +1,26 @@
 <h2 class="text-xl font-bold mb-4">Select Exercises</h2>
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-    <div *ngFor="let exercise of exercises$ | async" >
-        <app-exercise-card [exercise]="exercise" [isSelected]="isSelected(exercise)" (toggle)="toggleExercise($event)"/>
+
+<!-- Show loading state or data -->
+<div *ngIf="exercises$ | async as exercises; else loading">
+    <div *ngIf="exercises.length > 0; else noData">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div *ngFor="let exercise of exercises">
+                <app-exercise-card
+                    [exercise]="exercise"
+                    [isSelected]="isSelected(exercise)"
+                    (toggle)="toggleExercise($event)"
+                ></app-exercise-card>
+            </div>
+        </div>
     </div>
+
+    <!-- No exercises found -->
+    <ng-template #noData>
+        <p class="text-gray-500">No exercises found. Try searching again!</p>
+    </ng-template>
 </div>
+
+<!-- Loading state -->
+<ng-template #loading>
+    <p class="text-gray-500">Loading exercises...</p>
+</ng-template>
