--- a/src/app/components/workout-form/workout-form.component.html
+++ b/src/app/components/workout-form/workout-form.component.html
@@ -4,11 +4,17 @@
     <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Name</label>
     <input type="text" id="name" formControlName="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
   </div>
-    <div class="mb-4">
-        <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description</label>
-        <textarea  id="description" formControlName="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-        </textarea>
-    </div>
+  <div class="mb-4">
+    <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description</label>
+    <textarea id="description" formControlName="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+    </textarea>
+  </div>
+  
+  <app-exercise-selector
+    [selectedExercises]="workoutForm.get('exercises')?.value || []"
+    (exercisesChanged)="onExercisesSelected($event)"
+  />
+
   <button type="submit" class="bg-fitness-green-500 hover:bg-fitness-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
     Save Workout
   </button>
