fix: fixxed log submit button to use the design colors

--- a/src/app/components/progress/progress-tracking/progress-tracking/progress-tracking.component.html
+++ b/src/app/components/progress/progress-tracking/progress-tracking/progress-tracking.component.html
@@ -34,7 +34,7 @@
         <button 
           type="submit" 
           [disabled]="!progressForm.valid"
-          class="bg-blue-500 text-white px-4 py-2 rounded disabled:bg-gray-300">
+          class="bg-fitness-green-700 text-white px-4 py-2 rounded disabled:bg-gray-300">
           Log Progress
         </button>
       </form>
