--- a/src/app/components/blog/blog-list/blog-list/blog-list.component.html
+++ b/src/app/components/blog/blog-list/blog-list/blog-list.component.html
@@ -1,1 +1,28 @@
-<p>blog-list works!</p>
+<div class="container mx-auto p-4">
+    <div class="flex justify-between mb-4">
+      <h1 class="text-2xl font-bold">Blog Posts</h1>
+      <button routerLink="/blog/new" class="bg-blue-500 text-white px-4 py-2 rounded">
+        New Post
+      </button>
+    </div>
+    
+    <div class="grid gap-4">
+      <div *ngFor="let post of posts" class="border p-4 rounded">
+        <h2 class="text-xl font-bold">{{post.title}}</h2>
+        <div class="flex gap-2 mt-2">
+          <button [routerLink]="['/blog/view', post._id]" 
+                  class="bg-green-500 text-white px-3 py-1 rounded">
+            View
+          </button>
+          <button [routerLink]="['/blog/edit', post._id]"
+                  class="bg-yellow-500 text-white px-3 py-1 rounded">
+            Edit
+          </button>
+          <button (click)="deletePost(post._id!)"
+                  class="bg-red-500 text-white px-3 py-1 rounded">
+            Delete
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
