--- a/src/app/components/blog/blog-view/blog-view/blog-view.component.html
+++ b/src/app/components/blog/blog-view/blog-view/blog-view.component.html
@@ -1,1 +1,11 @@
-<p>blog-view works!</p>
+<div class="container mx-auto p-4" *ngIf="post">
+    <div class="mb-4">
+      <button routerLink="/blog" class="text-blue-500">← Back to Posts</button>
+    </div>
+    
+    <h1 class="text-3xl font-bold mb-4">{{post.title}}</h1>
+    
+    <div class="prose prose-lg max-w-none">
+      <markdown [data]="post.content"></markdown>
+    </div>
+  </div>
