--- a/src/app/components/blog/blog-view/blog-view/blog-view.component.html
+++ b/src/app/components/blog/blog-view/blog-view/blog-view.component.html
@@ -5,7 +5,7 @@
     
     <h1 class="text-3xl font-bold mb-4">{{post.title}}</h1>
     
-    <div class="prose prose-lg max-w-none">
+    <div class="prose prose-lg max-w-none bg-slate-100">
       <markdown [data]="post.content"></markdown>
     </div>
   </div>
