--- a/src/app/components/workout-tracking/workout-tracker/workout-tracker.component.html
+++ b/src/app/components/workout-tracking/workout-tracker/workout-tracker.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold mb-4">Workout Tracker</h1>
     <div class="grid grid-cols-1 gap-4">
-        <app-workout-selector></app-workout-selector>
-        <app-exercise-view></app-exercise-view>
+        <app-workout-selector (workoutSelected)="onWorkoutSelected($event)"></app-workout-selector>
+        <app-exercise-view [workoutPlan]="selectedWorkoutPlan"></app-exercise-view>
     </div>
 </div>
