--- a/src/app/components/workout-tracking/exercise-view/exercise-view.component.html
+++ b/src/app/components/workout-tracking/exercise-view/exercise-view.component.html
@@ -8,8 +8,9 @@
             </app-exercise-card>
             <div class="mt-4 grid grid-cols-2 gap-4">
                 <div>
-                    <label class="block text-sm font-medium text-gray-700">Weight (lbs)</label>
+                    <label class="block text-sm font-medium text-gray-700">Weight (kg)</label>
                     <input 
+                        min="1"
                         type="number" 
                         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm"
                         [(ngModel)]="exerciseRecords[exercise._id].weight"
